cmake_minimum_required(VERSION 2.8)
project(pf_follow)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(marker_gen/gen marker_gen/gen.cpp)
add_executable(track/aruco_track track/aruco_track.cpp)
add_executable(track/shi_tomasi track/shi_tomasi.cpp)
add_executable(track/tracker track/tracker.cpp)
target_link_libraries(marker_gen/gen ${OpenCV_LIBS})
target_link_libraries(track/aruco_track ${OpenCV_LIBS})
target_link_libraries(track/shi_tomasi ${OpenCV_LIBS})
target_link_libraries(track/tracker ${OpenCV_LIBS})